// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Outcome /> falls back to decimal if bad data 1`] = `
<DocumentFragment>
  <div>
    Yes 4.00
  </div>
</DocumentFragment>
`;

exports[`<Outcome /> renders decimal odds as expected 1`] = `
<DocumentFragment>
  <div>
    Yes 4.00
  </div>
</DocumentFragment>
`;

exports[`<Outcome /> renders fractional odds as expected 1`] = `
<DocumentFragment>
  <div>
    Yes 3/1
  </div>
</DocumentFragment>
`;
